--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "homepage": "https://github.com/romgrk/node-gtk#readme",
   "dependencies": {
-    "@mapbox/node-pre-gyp": "^1.0.0",
+    "@mapbox/node-pre-gyp": "^1.0.9",
     "lodash.camelcase": "4.3.0",
     "lodash.isequal": "4.5.0",
     "lodash.snakecase": "^4.1.1",
     "nan": "2.14.2",
-    "node-gyp": "^7.1.2",
+    "node-gyp": "^9.0.0",
     "remove-trailing-spaces": "^1.0.7",
     "unindent": "^2.0.0"
   },
@@ -46,8 +46,8 @@
     "aws-sdk": "^2.452.0",
     "chalk": "^2.4.2",
     "deasync": "^0.1.19",
-    "mocha": "^7.1.0",
-    "nid-parser": "0.0.5",
+    "mocha": "^10.0.0",
+    "nid-parser": "github:invidian/NID#invidian/updates-and-fixes",
     "node-pre-gyp-github": "^1.4.3"
   },
   "files": [
